<resources>
    <string name="app_name">ChitChat_newVersion</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="still_don_t_have_account_click_me">Still don\'t have account? Click me</string>
    <string name="forget_password">Forget Password</string>
    <string name="register_page">Register Page</string>
    <string name="add_your_image">Add your image</string>
    <string name="your_username">Your username</string>
    <string name="input_password_again">Input password again</string>
    <string name="register">Register</string>
    <string name="click_this_to_login">Click this to login page</string>
    <string name="show_password">show password</string>
    <string name="select_user">Select User</string>
    <string name="input_a_message">Input a message</string>
    <string name="login_page">Login Page</string>
    <string name="welcome_to_chit_chat_app">Welcome to Chit Chat App!</string>
    <string name="input_a_safety_Question">Safety question</string>
    <string name="input_a_safety_Answer">Safety question answer</string>
    <string name="confirm_Button">Confirm</string>
    <string name="return_button">Return</string>
    <string name="new_password">New password</string>
    <string name="side_menu">EXTRA</string>
    <string name="online">Online</string>
    <string name="user_profile">User Profile</string>
    <string name="back">Back</string>
    <string name="temperature">%1$.2f℃</string>
    <string name="humidity">%1$.1fRH</string>

</resources>