<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/background_head"
    tools:context=".activities.ChatActivity">


    <View
        android:id="@+id/viewBckground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_content_top"
        app:layout_constraintBottom_toTopOf="@id/layoutSend"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/headerBackground"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/background_head"
        app:layout_constraintBottom_toTopOf="@+id/viewSupporter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageInfo"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/white"/>

    <TextView
        android:id="@+id/textName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageInfo"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />


    <View
        android:id="@+id/viewSupporter"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageBack"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:overScrollMode="never"
        android:padding="@dimen/_20sdp"
        app:stackFromEnd="true"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/viewBckground"
        app:layout_constraintTop_toBottomOf="@id/viewSupporter"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="@id/viewBckground"
        app:layout_constraintEnd_toEndOf="@id/viewBckground"
        app:layout_constraintStart_toStartOf="@id/viewBckground"
        app:layout_constraintTop_toTopOf="@id/viewBckground" />


    <FrameLayout
        android:id="@+id/layoutSend"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginLeft="@dimen/_4sdp"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_send"
            android:tint="@color/white">
        </androidx.appcompat.widget.AppCompatImageView>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/layoutVoice"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@drawable/background_chat_input"
        app:layout_constraintBottom_toBottomOf="@+id/layoutSend"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_8sdp"
            android:src="@drawable/ic_voice"
            android:tint="@color/white">
        </androidx.appcompat.widget.AppCompatImageView>
    </FrameLayout>

    <EditText
        android:id="@+id/inputMessage"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginLeft="@dimen/_6sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:layout_marginRight="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:background="@drawable/background_chat_input"
        android:hint="@string/input_a_message"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/layoutSend"
        app:layout_constraintStart_toEndOf="@+id/layoutVoice"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/side_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#355C7D"
        android:text="@string/side_menu"
        android:textColor="@color/white"
        app:icon="@drawable/ic_menu"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackground" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/side_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#4E84B3"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/side_menu"
        app:layout_constraintTop_toBottomOf="@+id/side_menu"
        app:rippleColor="#e7d16b"
        app:srcCompat="@drawable/ic_image"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/side_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#021C6C"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/side_image"
        app:layout_constraintTop_toBottomOf="@+id/side_file"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/video_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:backgroundTint="#9E88B1"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/more_fab"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/more_fab"
        app:layout_constraintTop_toBottomOf="@+id/more_fab"
        app:srcCompat="@drawable/ic_video_call"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/phone_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#E498AE"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/video_call"
        app:layout_constraintTop_toBottomOf="@+id/camera"
        app:srcCompat="@drawable/ic_phone_call"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#C06C84"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="@+id/more_fab"
        app:layout_constraintEnd_toStartOf="@+id/more_fab"
        app:layout_constraintTop_toTopOf="@+id/more_fab"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_camera"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/side_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2B3988"
        android:contentDescription="@string/app_name"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/side_image"
        app:layout_constraintTop_toBottomOf="@+id/side_image"
        app:srcCompat="@drawable/ic_file"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/more_fab"
        android:layout_width="62dp"
        android:layout_height="53dp"
        android:layout_marginStart="12dp"
        android:backgroundTint="#6C5B7B"
        android:contentDescription="@string/app_name"
        app:fabSize="normal"
        app:layout_constraintStart_toStartOf="@+id/side_menu"
        app:layout_constraintTop_toBottomOf="@+id/side_menu"
        app:rippleColor="#00120A"
        app:srcCompat="@drawable/ic_more"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#80858175"
        android:padding="@dimen/_2sdp"
        android:text="@string/online"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/viewSupporter"/>

</androidx.constraintlayout.widget.ConstraintLayout>